<resources>
    <string name="app_name">Despierta</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main">Despierta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="buses">Buses</string>
    <string name="mini">Min</string>
    <string name="action_salir">Salir</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_amigos">Amigos</string>
    <string name="title_activity_mi_perfil">Perfil</string>
    <string name="title_activity_logueado">Buscar Amigos</string>
    <string name="title_activity_perfil_amigo">Perfil</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_listado_solicitudes">Solicitudes</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_pass2">Repetir contraseña</string>
    <string name="add_attention">Agregar</string>
    <string name="user_post">Nombre: Usuario</string>
    <string name="user_book">Edad: 25 años</string>
    <string name="user_name">Nombre Usuario</string>
    <string name="user_des">Descripcion lorem ipsum bla bla bla</string>
    <string name="user_recommend_tip">Rutas Utilizadas</string>
    <string name="action_button">Action Button</string>
    <string name="navigation_subheader">Despierta</string>
    <string name="navigation_sub_item_1">Login</string>
    <string name="navigation_sub_item_2">Perfil</string>
    <string name="title_activity_map">Map</string>
    <string name="search">Buscar</string>
    <string name="minimizar">Minimizar</string>
    <string name="navigation_sub_item_3">Configuraciones</string>
    <string name="navigation_sub_item_4">About</string>
    <string name="title_activity_about">About</string>
    <string name="Usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="app_id">915375455158720</string>

    <string-array name="micro">
        <item>Buses Hualpensan</item>
        <item>Via Lactea</item>
        <item>Via Futuro</item>
        <item>Nueva Sotrapel</item>
        <item>Via Siglo Xxi</item>
        <item>Chiguayante Sur</item>
        <item>Via Universo</item>
        <item>Expresos Chiguayante</item>
        <item>Nueva Llacolen</item>
        <item>Riviera Bio Bio</item>
        <item>San Pedro</item>
        <item>San Pedro Sur</item>
        <item>San Remo</item>
        <item>Ruta Las Playas</item>
        <item>Ruta Del Mar</item>
        <item>Buses Ruta Del Mar</item>
        <item>Las Golondrinas</item>
        <item>Buses Mini Verde</item>
        <item>Mini Buses Hualpencillo</item>
        <item>Flota Las Lilas</item>
        <item>Flota Centauro</item>
        <item>Buses Campanil</item>
        <item>Geminis Del Sur</item>
        <item>Buses Base Naval</item>
        <item>Buses Tucapel</item>
        <item>Mi expreso</item>
        <item>Rengo Lientur</item>
        <item>Buses Condor</item>
        <item>Las Bahias</item>
        <item>Buses Puchacay</item>
        <item>Pedro De Valdivia</item>
        <item>Las Galaxias</item>
        <item>Via Del Sol</item>
        <item>Nueva Sol Yet</item>
        <item>Biotren</item>
        <item>Intermodal Bio Bus</item>

    </string-array>

    <string name="search_hint">Ingrese su destino&#8230;</string>

</resources>
